# TerminalSimulator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  exemple.txt  exemplefor-i.txt  forkExample.c  forkExample.c~  main.c  makefile  parser(backup).c  parser.c  parser.h  pathBuilder.c  pathBuilder.h  terminalSimulator  terminalSimulator.c
internalCommands/: cd  cd.c  cd.h  hello  hello.c  tail  tail.c  uniq  uniq.c
